--- a/Examples/visualizing_sRMMD_knockoffs.ipynb
+++ b/Examples/visualizing_sRMMD_knockoffs.ipynb
@@ -184,7 +184,7 @@
     "axarr[4].set_xlabel('(e)', fontsize = 14)\n",
     "axarr[5].set_xlabel('(f)', fontsize = 14)\n",
     "axarr[1].patch.set_alpha(0.)\n",
-    "plt.savefig('mode_vs_epsilon_sRMMD.pdf',bbox_inches='tight')\n",
+    "plt.savefig('srmmd_knockoffs_vs_epsilon.pdf.pdf',bbox_inches='tight')\n",
     "plt.show()\n"
    ]
   },
