--- a/Examples/knockoff_synthetic_settings.ipynb
+++ b/Examples/knockoff_synthetic_settings.ipynb
@@ -36,7 +36,7 @@
     "n = 2000\n",
     "d = 100\n",
     "distType=\"GaussianAR1\" # {'GaussianAR1', 'SparseGaussian', 'GaussianMixtureAR1','MultivariateStudentT'}\n",
-    "dataSampler = generateSamples(distType,p )\n",
+    "dataSampler = generateSamples(distType,d )\n",
     "xTrain = dataSampler.sample(n)\n",
     "SigmaHat = np.cov(xTrain, rowvar=False)\n",
     "second_order = GaussianKnockoffs(SigmaHat, mu=np.mean(xTrain,0), method=\"sdp\")\n",
