--- a/Examples/knockoff_synthetic_settings.ipynb
+++ b/Examples/knockoff_synthetic_settings.ipynb
@@ -20,10 +20,10 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.neighbors import KernelDensity\n",
     "from sklearn.linear_model import LassoCV\n",
-    "from gaussian import GaussianKnockoffs\n",
-    "from machine import KnockoffGenerator\n",
+    "from src.gaussian import GaussianKnockoffs\n",
+    "from src.machine import KnockoffGenerator\n",
     "from sklearn import linear_model\n",
-    "from utils import generateSamples, sample_Y, select\n",
+    "from src.utils import generateSamples, sample_Y, select\n",
     "from sklearn import preprocessing"
    ]
   },
