--- a/Examples/knockoff_real_data.ipynb
+++ b/Examples/knockoff_real_data.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Variable selection using sRMMD knockoffs on real dataset\n",
-    "#### This notebook considers 'C18 positive' metabolites dataset. Severeal preprocessing steps e.g., missing value impuation, interquartile range filter and data standardization. After training knockoff generator with the preprocessed dataset, knockoffs are generated 100 times and Random forest is applied to find the knockoff statistic for each instance. Metabolites that appear more than 70 are only considered.   "
+    "This notebook apply sRMMD-knockoff filter on 'C18 positive' metabolites dataset to find important biomarkers. Before applying the knockoff filter, severeal preprocessing steps- missing value impuation, interquartile range filter and standardization are done on the data. After training knockoff generator with the preprocessed dataset, knockoffs are generated 100 times and Random forest is applied to find the knockoff statistic for each instance. Metabolites that appear more than 70 are only considered.   "
    ]
   },
   {
