--- a/Examples/knockoff_synthetic_settings.ipynb
+++ b/Examples/knockoff_synthetic_settings.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Demo Notebook for generating knockoffs\n",
-    "#### This notebook trains a knockoff generator that minimizes sRMMD. After training, knockoffs are generated and then LASSO regression is applied to compute the knockoff statistics. Average FDR vs. power tradeoff w.r.t. amplitude is shown at the end of the notebook."
+    "This notebook trains a knockoff generator that minimizes sRMMD. After training, knockoffs are generated and then LASSO regression is applied to compute the knockoff statistics. Average FDR vs. power tradeoff w.r.t. amplitude is shown at the end of the notebook."
    ]
   },
   {
