--- a/Examples/knockoff_real_data.ipynb
+++ b/Examples/knockoff_real_data.ipynb
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "df =  pd.read_csv('C18_Negative.txt', sep='\\t', dtype = object)\n",
+    "df =  pd.read_csv('dataset/Real dataset/C18_Negative.txt', sep='\t', dtype = object)\n",
     "df = df.rename(columns = df.iloc[0])\n",
     "df = df.drop(df.index[0]).reset_index(drop = True)\n",
     "df.columns = df.columns.str.replace(' ', '').str.lower()\n",
