--- a/Examples/knockoff_real_data.ipynb
+++ b/Examples/knockoff_real_data.ipynb
@@ -20,8 +20,8 @@
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.neighbors import KernelDensity\n",
-    "from gaussian import GaussianKnockoffs\n",
-    "from machine import KnockoffGenerator\n",
+    "from src.gaussian import GaussianKnockoffs\n",
+    "from src.machine import KnockoffGenerator\n",
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from scipy.stats import iqr\n",
