--- a/Examples/visualizing_sRMMD_knockoffs_w_r_t_epsilon.ipynb
+++ b/Examples/visualizing_sRMMD_knockoffs_w_r_t_epsilon.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This notebook visualizes two randomly selected dimension of the kncokoffs generated with sRMMD using different $\\varepsilon$. Description of the distributional setting  used here is given in Section 13.2 in the supplementary."
+    "This notebook visualizes two randomly selected dimension of the kncokoffs generated with sRMMD using different $\\varepsilon$. Description of the distributional setting  used here is given in Section 13.2 in the supplementary."
    ]
   },
   {
@@ -76,8 +76,7 @@
     }
    ],
    "source": [
-    "distType=\"GaussianMixtureAR1\"\n",
-    "gz = gzip.open(distType+'_epsilon_check.pkl'+ '.gz', 'rb')\n",
+    "gz = gzip.open('dataset\generated_srmmd_kncokoffs_vs_epsilon\GaussianMixtureAR1_epsilon_check.pkl.gz', 'rb')\n",
     "obj = pickle.loads(gz.read())\n",
     "gz.close()\n",
     "obj.keys()"
