--- a/Examples/knockoff_real_data.ipynb
+++ b/Examples/knockoff_real_data.ipynb
@@ -349,11 +349,12 @@
     }
    ],
    "source": [
+    "xTest = xTrain\n"
     "repeat_exp = 100\n",
     "indices = []\n",
     "for i in range(repeat_exp):\n",
-    "    xKnockoff = machine.generate(xTrain)\n",
-    "    Z, W = rf_oob_score(xTrain, xKnockoff, y)\n",
+    "    xKnockoff = machine.generate(xTest)\n",
+    "    Z, W = rf_oob_score(xTest, xKnockoff, y)\n",
     "    S, T = selection(W, offset =  1.0, nominal_fdr =  0.05)# original offset = 1.0\n",
     "    indices.append(list(S))\n",
     "    if (i%10)==0: print('no of Simulation completed:', i + 1)"
