--- a/Examples/knockoff_real_data.ipynb
+++ b/Examples/knockoff_real_data.ipynb
@@ -349,7 +349,7 @@
     }
    ],
    "source": [
-    "xTest = xTrain\n"
+    "xTest = xTrain\n",
     "repeat_exp = 100\n",
     "indices = []\n",
     "for i in range(repeat_exp):\n",
