--- a/Examples/knockoff_real_data.ipynb
+++ b/Examples/knockoff_real_data.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Significant metabolites selection using sRMMD knockoffs on real dataset\n",
-    "This notebook apply sRMMD-knockoff filter on 'C18 positive' metabolites dataset to find important biomarkers. Before applying the knockoff filter, severeal preprocessing steps- missing value impuation, and standardization are done on the data. After training the generator with the preprocessed dataset, knockoffs are produced 100 times and Random forest is applied to find the knockoff statistic for each instance. Metabolites that are found important (after applying the knockoff filter) more than 70 are only considered.   "
+    "This notebook demonstates how to apply sRMMD-knockoff filter on 'C18 positive' metabolites dataset to find important biomarkers. Before applying the knockoff filter, severeal preprocessing steps- missing value impuation, and standardization are done on the data. After training the generator with the preprocessed dataset, knockoffs are produced 100 times and Random forest is applied to find the knockoff statistic for each instance. Metabolites that are found important (after applying the knockoff filter) more than 70 are only considered.   "
    ]
   },
   {
